--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -649,6 +649,16 @@ tr:hover {
 
 /* 3.2 attendance view */
 
+.attendance-sheet-h2{
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  margin-bottom: 2rem !important;
+}
+
+.attendance-sheet-h3{
+  margin-top: 1.5rem !important;
+}
+
 .attendance-view-container{
   overflow: auto;
   max-height: 70vh;
