--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -843,3 +843,85 @@ padding-top: 1rem !important;
   border-radius: 10px;
   padding-top: 1rem !important;
 }
+
+/* 4.3 queries section -student side */
+
+.s-queries-container{
+  margin-top: 5rem !important;
+  margin-bottom: 3rem !important;
+  padding: 2rem !important;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.325); 
+}
+.s-queries-header{
+  font-family:fantasy;
+  
+}
+.s-queries-button{
+  background-color: #2a83e196;
+  padding: 0.3rem !important;
+  border: 0px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.225);
+
+}
+.s-queries-button:hover{
+  background-color: #084d9796;
+}
+
+.s-queries-list-container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  overflow: auto;
+  max-height: 50vh;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.s-queries-list-container-1 {
+  border: 4px solid rgb(18, 156, 231);
+  border-radius: 10px;
+  padding: 1rem !important;
+  background-color: rgba(255, 255, 255, 0.562);
+  width: 30vh;
+  height: 17vh; /* increased to handle larger content */
+  overflow-y: auto;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
+
+.status-pending{
+  background-color: rgb(232, 205, 49);
+  padding:5px !important;
+  border-radius: 10px;
+  
+}
+.status-approved{
+  background-color: rgb(61, 232, 49);
+  padding:5px !important;
+  border-radius: 10px;
+  
+}
+.status-rejected{
+  background-color: rgb(230, 92, 42);
+  padding:5px !important;
+  border-radius: 10px;
+  color: white;
+  
+}
+
+.s-queries-filters-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 2rem !important;
+  align-items:center;
+  padding-bottom: 2rem !important;
+}
+
+.s-queries-filters-container select{
+ padding: 0.4rem !important;
+}
+/* mb-4 d-flex flex-wrap gap-3 */
